<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightsandal"
    tools:context=".LoginActivityFragments.SignUpFragment">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="@drawable/ellipsestyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/SignUpBackbutton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/backarrow"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/SignUp_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold"/>


    <TextView
        android:id="@+id/UserNameSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/name"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/id_edittext_signup_name_Text"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:inputType="textPersonName"
        android:layout_gravity="center"
        android:background="@drawable/edittext"
        android:textColor="@color/black"
        android:paddingLeft="10dp"
       />

    <TextView
        android:id="@+id/MobileNumberSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/mobile"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/id_edittext_signup_mobile_Text"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:inputType="phone"
        android:background="@drawable/edittext"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:paddingLeft="10dp"

        />

    <TextView
        android:id="@+id/EmailSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/email"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/id_edittext_signup_email_Text"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/edittext"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:paddingLeft="10dp"
        />

    <TextView
        android:id="@+id/AddressSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:text="@string/address"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/id_edittext_signup_address_Text"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:inputType="textPostalAddress"
        android:background="@drawable/edittext"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:paddingLeft="10dp"
        />

    <TextView
        android:id="@+id/DateOfBirthSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/d_o_b"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/id_edittext_signup_date_Text"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/edittext"
        android:layout_gravity="center"
        android:inputType="date"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/GenderSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/gender"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <RadioGroup
        android:id="@+id/groupradio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingLeft="30dp"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/id_select_male"
            android:text="@string/male"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:buttonTint="@color/black"
            />

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/id_select_female"
            android:text="@string/female"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:buttonTint="@color/blue"
            />


    </RadioGroup>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/id_button_signup_next"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="45dp"
        android:layout_gravity="center"
        android:background="@drawable/roundstyle"
        android:text="@string/next"
        android:layout_marginBottom="30dp"
        android:textColor="@color/white"
        />
</LinearLayout>
</androidx.core.widget.NestedScrollView>
