<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightsandal"
    tools:context=".LoginActivityFragments.SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="142dp"
            android:background="@color/sandal">


            <ImageView
                android:id="@+id/id_change_password_back_button"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="50dp"
                android:src="@mipmap/backarrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/SignUp_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="44dp"
                android:layout_marginTop="48dp"
                android:text="@string/change_password"
                android:textColor="@color/black"
                android:textSize="25dp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/id_change_password_back_button"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>



        <TextView
            android:id="@+id/id_change_password_current_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="80dp"
            android:text="@string/current_password"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/id_change_password_current_password_Text"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:layout_gravity="center"
            android:background="@drawable/edittext"
            android:textColor="@color/black"
            android:paddingLeft="10dp"
            />

        <TextView
            android:id="@+id/id_change_password_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/password"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/id_change_password_password_Text"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:inputType="phone"
            android:background="@drawable/edittext"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:paddingLeft="10dp"

            />


        <TextView
            android:id="@+id/id_change_password_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/confirm_password"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/id_change_password_confirm_Text"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:inputType="phone"
            android:background="@drawable/edittext"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:paddingLeft="10dp"

            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/id_change_password_save_button"
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:background="@drawable/roundstyle"
            android:text="@string/save_profile"
            android:layout_marginBottom="30dp"
            android:textColor="@color/white"
            />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
