<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightsandal"
    tools:context=".LoginActivityFragments.SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="270dp">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/idAgentLeaderProfileBackArrow"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="56dp"
                android:src="@mipmap/backarrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/id_agency_add_member_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="52dp"
                android:layout_marginTop="52dp"
                android:text="Update Profile"
                android:textColor="@color/black"
                android:textSize="25dp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/idAgentLeaderProfileBackArrow"
                app:layout_constraintTop_toTopOf="parent">

            </TextView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/id_agency_add_member_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="Team Leader Details"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.231"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/idAgentLeaderProfileBackArrow" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/id_agency_add_member_profile_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:src="@mipmap/profilename"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/id_agency_add_member_details">

            </androidx.appcompat.widget.AppCompatImageView>


            <androidx.cardview.widget.CardView
                android:id="@+id/id_agency_add_member_card"
                android:layout_width="85dp"
                android:layout_height="25dp"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/ahs"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/id_agency_add_member_profile_image">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Edit Photo"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    android:textStyle="bold">

                </TextView>


            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>






        <TextView
            android:id="@+id/id_agent_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/name"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/idEdittextAgentNameText"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:layout_marginTop="11dp"
            android:layout_gravity="center"
            android:background="@drawable/edittext"
            android:textColor="@color/black"
            android:paddingLeft="10dp"
            />

        <TextView
            android:id="@+id/id_agent_mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="11dp"
            android:text="@string/mobile"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/idEdittextAgentMobileText"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:inputType="phone"
            android:background="@drawable/edittext"
            android:layout_marginTop="11dp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:paddingLeft="10dp"

            />

        <TextView
            android:id="@+id/id_agent_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="11dp"
            android:text="@string/email"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/idEdittextAgentEmailText"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/edittext"
            android:layout_marginTop="11dp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:paddingLeft="10dp"
            />

        <TextView
            android:id="@+id/id_agent_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:layout_marginLeft="30dp"
            android:text="@string/address"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/idEdittextAgentAddressText"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:inputType="textPostalAddress"
            android:background="@drawable/edittext"
            android:layout_gravity="center"
            android:layout_marginTop="11dp"
            android:textColor="@color/black"
            android:paddingLeft="10dp"
            />

        <TextView
            android:id="@+id/id_agent_dob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="11dp"
            android:text="@string/d_o_b"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/idEdittextAgentDobText"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="11dp"
            android:focusable="false"
            android:paddingLeft="10dp"
            android:background="@drawable/edittext"
            android:inputType="date"
            android:textColor="@color/black" />


        <TextView
            android:id="@+id/id_agency_add_member_next_role"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:layout_marginLeft="30dp"
            android:text="Role"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/idEdittextAgentRoleText"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:inputType="textPostalAddress"
            android:background="@drawable/edittext"
            android:layout_gravity="center"
            android:layout_marginTop="11dp"
            android:textColor="@color/black"
            android:paddingLeft="10dp"
            />

        <TextView
            android:id="@+id/id_agency_add_member_next_yoe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="11dp"
            android:text="Year of Experience"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/idEdittextAgentYoeText"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:background="@drawable/edittext"
            android:layout_gravity="center"
            android:layout_marginTop="11dp"
            android:paddingLeft="10dp"
            android:inputType="date"
            android:textColor="@color/black"
            />



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/idAgentLeaderProfileUpdateButton"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="45dp"
            android:layout_gravity="center"
            android:background="@drawable/roundstyle"
            android:text="Update Profile"
            android:layout_marginBottom="30dp"
            android:textColor="@color/white"
            />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
